@@ -291,6 +291,7 @@ enum AVCodecID {
     AV_CODEC_ID_MVHA,
     AV_CODEC_ID_CDTOONS,
     AV_CODEC_ID_MV30,
+    AV_CODEC_ID_NOTCHLC,
 
     /* various PCM "codecs" */
     AV_CODEC_ID_FIRST_AUDIO = 0x10000,     ///< A dummy id pointing at the start of audio codecs
